Bug 228644 - kontact crashes inserting a contact via copy & paste from the kadressbook
Summary: kontact crashes inserting a contact via copy & paste from the kadressbook
Status: RESOLVED FIXED
Alias: None
Product: kmail
Classification: Unmaintained
Component: composer (other bugs)
Version First Reported In: 1.13.0
Platform: openSUSE Linux
: NOR crash
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
: 220380 231829 (view as bug list)
Depends on:
Blocks:
 
Reported: 2010-02-26 18:14 UTC by Roman Fietze
Modified: 2010-09-08 14:56 UTC (History)
7 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
New crash information added by DrKonqi (4.15 KB, text/plain)
2010-04-25 00:02 UTC, heinemann
Details
New crash information added by DrKonqi (6.27 KB, text/plain)
2010-05-27 16:56 UTC, Filippo Ruggeri
Details
New crash information added by DrKonqi (6.16 KB, text/plain)
2010-06-18 15:30 UTC, Georg Greve
Details
New crash information added by DrKonqi (7.11 KB, text/plain)
2010-07-27 13:48 UTC, Carlos sanchiavedraz
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Roman Fietze 2010-02-26 18:14:26 UTC
Application: kontact (4.4)
KDE Platform Version: 4.4.00 (KDE 4.4.0) "release 2"
Qt Version: 4.6.2
Operating System: Linux 2.6.31.12-0.1-default x86_64
Distribution: "openSUSE 11.2 (x86_64)"

-- Information about the crash:
Very simple: create a new mail. Switch to kadressbook, select a contact, <copy>, <paste> in new message window.


The crash can be reproduced every time.

 -- Backtrace:
Application: Kontact (kontact), signal: Segmentation fault
[KCrash Handler]
#5  0x00007fca4e467370 in KMimeType::patterns() const () from /usr/lib64/libkdecore.so.5
#6  0x00007fca36a63b4f in KMComposeWin::slotAttachFileResult (this=0xec2040, job=<value optimized out>) at /usr/src/debug/kdepim-4.4.0/kmail/kmcomposewin.cpp:2415
#7  0x00007fca36a7fade in KMComposeWin::qt_metacall (this=0xec2040, _c=InvokeMetaMethod, _id=<value optimized out>, _a=0x7ffff21eace0) at /usr/src/debug/kdepim-4.4.0/build/kmail/kmcomposewin.moc:314
#8  0x00007fca4e0a778f in QMetaObject::activate(QObject*, QMetaObject const*, int, void**) () from /usr/lib64/libQtCore.so.4
#9  0x00007fca4e44f0b2 in KJob::result(KJob*) () from /usr/lib64/libkdecore.so.5
#10 0x00007fca4e456750 in KJob::emitResult() () from /usr/lib64/libkdecore.so.5
#11 0x00007fca4b89c4e3 in KIO::SimpleJob::slotFinished() () from /usr/lib64/libkio.so.5
#12 0x00007fca4b936487 in KIO::TransferJob::slotFinished() () from /usr/lib64/libkio.so.5
#13 0x00007fca4b91f671 in KIO::TransferJob::qt_metacall(QMetaObject::Call, int, void**) () from /usr/lib64/libkio.so.5
#14 0x00007fca4e0a778f in QMetaObject::activate(QObject*, QMetaObject const*, int, void**) () from /usr/lib64/libQtCore.so.4
#15 0x00007fca4b978231 in KIO::SlaveInterface::dispatch(int, QByteArray const&) () from /usr/lib64/libkio.so.5
#16 0x00007fca4b85e833 in KIO::SlaveInterface::dispatch() () from /usr/lib64/libkio.so.5
#17 0x00007fca4b8a0b06 in KIO::Slave::gotInput() () from /usr/lib64/libkio.so.5
#18 0x00007fca4b8a0cdc in KIO::Slave::qt_metacall(QMetaObject::Call, int, void**) () from /usr/lib64/libkio.so.5
#19 0x00007fca4e0a778f in QMetaObject::activate(QObject*, QMetaObject const*, int, void**) () from /usr/lib64/libQtCore.so.4
#20 0x00007fca4b8606e7 in ?? () from /usr/lib64/libkio.so.5
#21 0x00007fca4b8607ad in KIO::Connection::qt_metacall(QMetaObject::Call, int, void**) () from /usr/lib64/libkio.so.5
#22 0x00007fca4e0a46c9 in QObject::event(QEvent*) () from /usr/lib64/libQtCore.so.4
#23 0x00007fca4d450e1c in QApplicationPrivate::notify_helper(QObject*, QEvent*) () from /usr/lib64/libQtGui.so.4
#24 0x00007fca4d4573fb in QApplication::notify(QObject*, QEvent*) () from /usr/lib64/libQtGui.so.4
#25 0x00007fca4e9f2446 in KApplication::notify(QObject*, QEvent*) () from /usr/lib64/libkdeui.so.5
#26 0x00007fca4e09498c in QCoreApplication::notifyInternal(QObject*, QEvent*) () from /usr/lib64/libQtCore.so.4
#27 0x00007fca4e097107 in QCoreApplicationPrivate::sendPostedEvents(QObject*, int, QThreadData*) () from /usr/lib64/libQtCore.so.4
#28 0x00007fca4e0be373 in ?? () from /usr/lib64/libQtCore.so.4
#29 0x00007fca458aedee in g_main_context_dispatch () from /usr/lib64/libglib-2.0.so.0
#30 0x00007fca458b27b8 in ?? () from /usr/lib64/libglib-2.0.so.0
#31 0x00007fca458b28e0 in g_main_context_iteration () from /usr/lib64/libglib-2.0.so.0
#32 0x00007fca4e0bdeb3 in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib64/libQtCore.so.4
#33 0x00007fca4d4ff51e in ?? () from /usr/lib64/libQtGui.so.4
#34 0x00007fca4e0932a2 in QEventLoop::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib64/libQtCore.so.4
#35 0x00007fca4e09367c in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib64/libQtCore.so.4
#36 0x00007fca4e0973cb in QCoreApplication::exec() () from /usr/lib64/libQtCore.so.4
#37 0x0000000000403ede in main (argc=<value optimized out>, argv=<value optimized out>) at /usr/src/debug/kdepim-4.4.0/kontact/src/main.cpp:224

Possible duplicates by query: bug 174112, bug 166517.

Reported using DrKonqi
Comment 1 Roman Fietze 2010-03-23 19:36:23 UTC
Could reproduce this bug easily using KDE 4.4.1. This time by dragging and dropping an entry from kadressbook to the kmail composer windows and selecting "as attachment".
Comment 2 Christophe Marin 2010-03-26 00:51:37 UTC
*** Bug 220380 has been marked as a duplicate of this bug. ***
Comment 3 Christophe Marin 2010-03-26 00:51:47 UTC
*** Bug 231829 has been marked as a duplicate of this bug. ***
Comment 4 heinemann 2010-04-25 00:02:49 UTC
Created attachment 43018 [details]
New crash information added by DrKonqi

Its happen also every time with Drag & Drop.
Comment 5 Filippo Ruggeri 2010-05-27 16:56:06 UTC
Created attachment 43944 [details]
New crash information added by DrKonqi

Cut a contact from kaddressbook -> paste in a mail (kmail) -> kontact crash
Comment 6 Georg Greve 2010-06-18 15:30:06 UTC
Created attachment 48110 [details]
New crash information added by DrKonqi

Dragged contact from address book and dropped it into a draft email.
Comment 7 Allen Winter 2010-06-18 23:11:25 UTC
SVN commit 1139654 by winterz:

in slotAttachFileResult(), when checking the mimetype from the TransferJob,
make sure to also look for mimetype aliases (per dfaure) and then be careful
still about 0 KMimeType::Ptr's.

BUG: 228644
MERGE: trunk



 M  +6 -2      kmcomposewin.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1139654
Comment 8 Allen Winter 2010-06-20 15:18:29 UTC
SVN commit 1140352 by winterz:

foward port SVN commit 1139654 by winterz from 4.4 branch:
 
when checking the mimetype from the TransferJob, make sure to also look for
mimetype aliases (per dfaure) and then be careful still about 0 KMimeType::Ptr's.
CCBUG: 228644


 M  +6 -1      attachmentfromurljob.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1140352
Comment 9 Carlos sanchiavedraz 2010-07-27 13:48:13 UTC
Created attachment 49528 [details]
New crash information added by DrKonqi

I still have the same bug even when the bug ticket is marked as closed.
Actually, although it's basically the same, the contact was attached via drag&drop from KaddressBook.

Sorry if it hasn't been yet fixed in my kontact version.
Comment 10 pa_ubach 2010-09-08 14:56:14 UTC
I still have the same bug. My Kontact version is 4.4.2. The header states that the status is solved. When or where has it been solved?

Thanks!