in slotAttachFileResult(), when checking the mimetype from the TransferJob, make sure to also look for mimetype aliases (per dfaure) and then be careful still about 0 KMimeType::Ptr's.

BUG: 228644
MERGE: trunk


svn path=/branches/KDE/4.4/kdepim/; revision=1139654